# pmenu

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build-run.sh  build.sh  flake.nix  makefile  package.nix
script/: cmake-build.sh  cmake-install.sh
src/: args.c  args.h  main.c  pmenu.c  pmenu.h
